--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     }
   },
   "dependencies": {
-    "electron-updater": "^4.0.6",
+    "electron-updater": "^4.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
@@ -110,9 +110,9 @@
     "cross-env": "^5.2.0",
     "css-loader": "1.0.1",
     "cz-conventional-changelog": "^2.1.0",
-    "electron": "^4.1.1",
-    "electron-builder": "^20.39.0",
-    "electron-log": "^3.0.3",
+    "electron": "^9.1.1",
+    "electron-builder": "^22.8.0",
+    "electron-log": "^4.2.2",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -123,6 +123,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
     "react-hot-loader": "^4.8.2",
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.3",
@@ -131,9 +132,6 @@
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
     "ts-loader": "^5.3.3",
-    "tslint": "^5.14.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0",
     "typescript": "^3.3.4000",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^1.1.2",
