--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,12 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", "scripts", "acceptance-tests", "webpack", "jest"],
   "include": ["build", "public", "src"]
